# reven

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/workflows/: build-publish.yml  publish.yml
src/reven/: __init__.py  lib.py  main.py
src/reven/fast/: ngram.c  pattern.c
src/reven/ops/: __init__.py  byte_freq.py  hex2bin.py  ngram.py  pattern.py  search.py  slice.py  transform.py  upset.py
